    function
  - cOutVector::record() corrected: it should update the inspector even
    if it doesn't write to file
Sept 23, 1999
  - callInitialize() and scheduleStart() swapped in cSimulation's startRun()
    to support send()/scheduleAt() in initialize() to modules with activity().
  - same change made to createInitStart(), and it was renamed to
    createScheduleInit() to reflect the new order of what it does.
Oct 6, 1999
  - isSelfMessage() member function added to cMessage. It tells if the message
    was sent (using a send..() function) or posted by a scheduleAt() call.
  - a new void* pointer was added to cMessage. The pointer is set/returned by
    the setContextPointer(void *p) and contextPointer() functions, and it can
    be used for any purpose by the simulation programmer. It is not used by the
    simulation kernel, and it is treated as a mere pointer (no memory mgmt is
    done on it). Intended purpose: a module which schedules several
    self-messages (timers) will need to identify a self-message when it arrives
    back to the module, ie. the module will have to determine which timer
    went off and what to do then. The context pointer can be made to point
    at a data structure kept by the module which can carry enough "context"
    information about the event.
Remaining -Wall warnings: "%lf", "%lg", "%le" in printf format strings.
------ omnetpp-2.0b2 released ------
Nov 9,1999
  - iso c++ compatibility hack: in expressions like return s?s:"" the "" needs
    a cast to char* (to cast away constness). Added a (CONST_HACK) macro until
    the source is made fully const-correct, hopefully in the near future.
Dec 4,1999
  - compiled with MSVC. Minor changes: changed int to bool, struct to class
    in some places. sim_std.dsp added. NOTE: one has to rename all .cc files
    to .cpp for compiling (ren *.cc *.cpp)!
Dec 18,1999
  - renamed isA() to className() in cObject and derived classes. Compatibility
    #define added to defs.h