@@ -689,12 +689,17 @@ Remaining -Wall warnings: "%lf", "%lg", "%le" in printf format strings.
 ------ omnetpp-2.0b2 released ------
 Nov 9,1999
   - iso c++ compatibility hack: in expressions like return s?s:"" the "" needs
-    a cast to char* (to cast away constness). Added a (CONST_HACK) macro until
+    a cast to char* (to cast away constness). Added a CONST_CAST() macro until
     the source is made fully const-correct, hopefully in the near future.
 Dec 4,1999
   - compiled with MSVC. Minor changes: changed int to bool, struct to class
     in some places. sim_std.dsp added. NOTE: one has to rename all .cc files
     to .cpp for compiling (ren *.cc *.cpp)!
+Dec 5,1999
+  - Makefile.vc added
 Dec 18,1999
   - renamed isA() to className() in cObject and derived classes. Compatibility
     #define added to defs.h
+  - in cMessage, isbad() renamed to hasBitError(), isgood() removed, and
+    setError() renamed to setBitError()
+
